# fastapi-hiring-assesment

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 05f0edee6691_.py  35171f5ab0b2_.py  8b4a93259941_.py  e67f6944e6a1_.py
src/: main.py
src/db/: database.py
src/models/: books_models.py
src/routers/: books_router.py
src/schemas/: books_schemas.py
