[tool.poetry]
name = "fastapi-hiring-assignment"
version = "0.1.0"
description = "fastapi-hiring-assignment"
authors = ["sohanur rahman <shohanur.it@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
python-multipart = "^0.0.9"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
asyncpg = "0.30.0"

[tool.poetry.scripts]
app = "src.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"